--- a/src/app/parts/search-dialog-form-plan/search-dialog-form-plan.component.html
+++ b/src/app/parts/search-dialog-form-plan/search-dialog-form-plan.component.html
@@ -14,7 +14,7 @@
       </button> -->
   </mat-dialog-actions>
   <mat-dialog-content>
-    <mat-tab-group [selectedIndex]="tabIndex">
+    <mat-tab-group>
       <mat-tab translate label="{{ 'Areas' | translate }}">
         <mat-accordion [multi]="true" formArrayName="areas">
           <mat-expansion-panel
@@ -30,7 +30,7 @@
               [expandedHeight]="'45px'"
             >
               <div class="box">
-                <span class="pref" [ngClass]="{'bold':item.value.isHighlight}">{{ item.value.parentName | langFilter: lang }}</span> <span class="qty" *ngIf="data.isList">({{ item.value.qty }})</span>
+                <span class="pref" [ngClass]="{'bold':item.value.isHighlight}">{{ item.value.parentName | langFilter: lang }}</span>
               </div>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
@@ -68,8 +68,7 @@
                       [attr.disabled]="sub.value.qty === 0 ? true : null"
                     />
                     <label for="{{ sub.value.id }}">
-                      {{ sub.value.name | langFilter: lang
-                      }}<span class="qty" *ngIf="data.isList">({{ sub.value.qty }})</span>
+                      {{ sub.value.name | langFilter: lang }}
                     </label>
                   </li>
                 </ul>
@@ -105,11 +104,10 @@
                     [checked]="sub.value.selected"
                     formControlName="selected"
                     (change)="onCategoryChange($event)"
-                    [attr.disabled]="sub.value.qty === 0 && data.isList ? true : null"
+                    [attr.disabled]="null"
                   />
                   <label for="{{ sub.value.id }}">
-                    {{ sub.value.name | langFilter: lang
-                    }}<span class="qty" *ngIf="data.isList">({{ sub.value.qty }})</span>
+                    {{ sub.value.name | langFilter: lang }}
                   </label>
                 </li>
               </ul>
@@ -125,8 +123,7 @@
         {{ "Reset" | translate }}
       </button>
       <button mat-raised-button [mat-dialog-close]="result" class="submit">
-        <i class="material-icons"> add </i>{{ "Setting" | translate }}&nbsp;
-        <span *ngIf="data.isList">( {{ result?.length }} {{"PaginationItem"|translate}})</span>
+        <i class="material-icons"> add </i>{{ "Setting" | translate }}
       </button>
     </div>
   </div>
