--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1293,7 +1293,7 @@
         ::ng-deep .owl-next i {
           color: #ccc;
           transform: scale(1);
-          background-color: #000;
+          background-color: #00000060;
         }
 
         ::ng-deep .owl-dots {
