--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -169,7 +169,7 @@
 
         ::ng-deep .owl-prev i,
         ::ng-deep .owl-next i {
-          background-color: #000;
+          background-color: #00000060;
           color: #ccc;
           transform: scale(1);
         }
