--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -283,7 +283,7 @@ p{
 
   ::ng-deep .owl-prev i,
   ::ng-deep .owl-next i {
-    background-color: #000;
+    background-color: #00000060;
     color: #ccc;
     transform: scale(1);
   }
