REMOJU-416 プラン作成　GoogleMap連携しない プラン詳細からもスポット詳細またはGoogleMapに飛べるようにする。

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -190,7 +190,7 @@
                   </button>
                 </div>
               </div>
-              <div class="spot-image" (click)="linktoSpot(item.spotId)">
+              <div class="spot-image" (click)="linktoSpot(item)">
                 <owl-carousel-o
                     *ngIf="item.pictures.length > 1; else singlePict"
                     [options]="mainOptions"
