--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -22,9 +22,7 @@
             </span>
           </div>
           <div class='buttons'>
-            <!--<button mat-button class="add-to-favorite" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()"></button>-->
-            <button mat-icon-button class="plan_fav" (click)="onClickFavorite()">
-              <img src="../../../assets/img/hart_small.svg">
+            <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()">
             </button>
             <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
               <img src="{{addplanbtn_src}}" alt="add to plan">
