--- a/src/app/parts/map-infowindow-dialog/map-infowindow-dialog.component.html
+++ b/src/app/parts/map-infowindow-dialog/map-infowindow-dialog.component.html
@@ -44,10 +44,10 @@
         </button>
         <button class="add-to-favorite" (click)="onClickFavorite()">
           <span class="button" *ngIf="!data.isFavorite">
-            <img src="../../../assets/img/icon_addtofav.svg" alt="">
+            <img src="../../../assets/img/icon_fav_b.svg" alt="">
           </span>
           <span class="button" *ngIf="data.isFavorite">
-            <img src="../../../assets/img/icon_fav_r.svg" alt="">
+            <img src="../../../assets/img/icon_fav_b_on.svg" alt="">
           </span>
           <span class="button-text">
             {{ "Favorite" | translate }}
