REMOJU-405 画像アップロード時にサイズ縮小されていない

--- a/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
+++ b/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
@@ -8,7 +8,8 @@
     class="cropper"
     [imageFile]="data.pictureFile"
     [aspectRatio]="aspectRatio"
-    [imageQuality]=100
+    [imageQuality]=75
+    [resizeToWidth]="800"
     [roundCropper]="data.roundCropper"
     format="webp"
     (imageCropped)="imageCropped($event)"
