REMOJU-422 プラン詳細　お気に入り登録　色がつかない

--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -1,6 +1,8 @@
-<div class="spotdtl">
+<div class="spotdtl" (swiperight)="onSwipeRight($event,data.spotId)">
   <mat-card id="spotdtlheader" [ngClass]="{'onplan':myPlanSpots?.includes($spotId)}">
-    <div class='link' (click)="linktolist()">{{"BackEveryoneRecommendations" | translate}}</div>
+    <div class='link' (click)="linktolist()">
+      <span class="frame">{{"BackEveryoneRecommendations" | translate}}</span>
+    </div>
     <mat-card-content>
       <div class='header'>
         <div class='lt'>
