--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -24,8 +24,7 @@
             </span>
           </div>
           <div class='buttons'>
-            <button mat-icon-button class="plan_fav" (click)="onClickFavorite()">
-              <img src="../../../assets/img/hart_small.svg" alt="">
+            <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()">
             </button>
             <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
               <img src="{{addplanbtn_src}}" alt="add to plan">
