REMOJU-425 googleapisのscriptタグを削除する

--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -6,8 +6,10 @@
       <mat-label>{{ 'GoogleKeyword' | translate }}</mat-label>
       <input
         matInput
+        matGoogleMapsAutocomplete
         #keyword
         id="keyword"
+        (onAutocompleteSelected)="onAutocompleteSelected($event)"
         value="{{ place ? place.name : '' }}" />
     </mat-form-field>
   </div>
