REMOJU-428 ソース整理2

--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -25,7 +25,7 @@
             {{ "San" | translate }}
           </span>
           <span>
-            <a mat-list-item (click)="commonService.logout(currentlang)">{{ "Logout" | translate }}</a>
+            <a mat-list-item (click)="commonService.logout()">{{ "Logout" | translate }}</a>
           </span>
         </div>
       </mat-nav-list>
