--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -8,7 +8,7 @@
       <button mat-button class="close-my-plan" (click)="onhandleCartNav(true)">
         <img src="{{backbtn_src}}" alt="close my plan" />
       </button>
-      <app-myplan></app-myplan>
+      <app-myplan [isMobile]="isMobile"></app-myplan>
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="body">
