プランに戻るボタンのcursor

--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -32,6 +32,7 @@ div.spotdtl {
       padding: 6px 12px;
       display: flex;
       justify-content: center;
+      cursor: pointer;
 
       .frame {
         border: 1px solid #B7B7B7;
