--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -34,6 +34,7 @@ div.plandtl {
       padding: 3px 12px 9px;
       display: flex;
       justify-content: center;
+      cursor: pointer;
 
       .frame {
         border: 1px solid #B7B7B7;
