REMOJU-413 プランスポット一覧のプロフィール表示機能

--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -125,9 +125,9 @@
       </mat-card-content>
     </mat-card>
   </ng-container>
-  
+
   <mat-card>
-    <app-userprofile-panel *ngIf="data && isPreview" [user]="data" [country]="countryAll" [edit]="isPreview" (event)="onClickPreviewSwitch()"></app-userprofile-panel>
+    <app-userprofile-panel *ngIf="data && isPreview" [user]="data" [edit]="isPreview" (event)="onClickPreviewSwitch()"></app-userprofile-panel>
   </mat-card>
 
   <!-- 非公開情報 -->
