--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -3,7 +3,7 @@
     <div class='header'>
       <div class='lt'>
         <span class='avatar'>
-          <a (click)="toPostUser(item.postObjectId)">
+          <a (click)="toPostUser(item)">
             <img [src]="genUserPicture()" [alt]="genUserName()">
             <span class="username">{{genUserName()}}</span>
           </a>
