--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -20,6 +20,7 @@
     (addMyPlan)="addMyPlan($event)"
     (setFav)="setFavorite($event)"
     (keyword)="keywordSearch($event)"
+    (userPosts)="onViewUserPost(item)"
   >
   </app-planspot-list-item>
 </app-planspot-list>
