--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,1 +1,1 @@
-<app-userprofile-panel *ngIf="data && $country" [user]="data" [country]="$country"></app-userprofile-panel>
+<app-userprofile-panel *ngIf="data" [user]="data"></app-userprofile-panel>
