--- a/src/app/parts/user-plan-list/user-plan-list.component.html
+++ b/src/app/parts/user-plan-list/user-plan-list.component.html
@@ -3,26 +3,28 @@
   <span>{{data.user.displayName}}さんの投稿一覧</span>
 </div>
 <!-- user-profile -->
-<app-userprofile-panel *ngIf="data.user && data.country" [otherUser]="data.user" [country]="data.country" [detail]="true" [memo]="data.memo"></app-userprofile-panel>
+<app-userprofile-panel *ngIf="data.user" [otherUser]="data.user" [detail]="true"></app-userprofile-panel>
 
 <h4>私がおすすめの旅プラン</h4>
 
-<dl class='category' *ngIf="data.rows.searchCategories.length>0">
-  <dd *ngFor="let item of data.rows.searchCategories">
+<dl class='category' *ngIf="searchCategories.length > 0">
+  <dd *ngFor="let item of searchCategories">
     {{ item | langFilter:lang}}
   </dd>
 </dl>
 
 <div class='rows'>
-  <app-planspot-list-item
-    *ngFor="let item of data.rows.userPlans" 
-    [item]="item" 
-    [lang]="lang" 
-    [myPlanSpots]="myPlanSpots"
-    (linked)="linktoDetail($event)" 
-    (addMyPlan)="addMyPlan($event)" 
-    (setFav)="setFavorite($event)">
-  </app-planspot-list-item>
+  <app-planspot-list (scrolled)="onScrollDown()" [isList]="true" [condition]="condition">
+    <app-planspot-list-item
+      *ngFor="let item of details$"
+      [item]="item"
+      [lang]="lang"
+      [myPlanSpots]="myPlanSpots"
+      (linked)="linktoDetail($event)"
+      (addMyPlan)="addMyPlan($event)"
+      (setFav)="setFavorite($event)">
+    </app-planspot-list-item>
+  </app-planspot-list>
 </div>
 
 
