--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -306,10 +306,10 @@
       </ng-container>
 
       <ng-template #profile>
-        <app-userprofile-panel *ngIf="data.user && data.country" [otherUser]="data.user" [country]="data.country"
-          [detail]="true" [memo]="data.memo"></app-userprofile-panel>
+        <app-userprofile-panel *ngIf="data.user" [otherUser]="data.user"
+          [detail]="true"></app-userprofile-panel>
         <div class='buttons'>
-          <button mat-button disableRipple matBadge="{{userData.userPlans.length}}" matBadgeSize="small"
+          <button mat-button disableRipple matBadge="{{ userPlanList.length }}" matBadgeSize="small"
             (click)="onViewUserPost()">{{"ViewUserPost"|translate}}</button>
         </div>
       </ng-template>
