SNSログイン時にメニューがログイン状態にならない　暫定FIX

--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -15,10 +15,10 @@
       </mat-nav-list>
 
       <mat-nav-list class="user">
-        <span *ngIf="!commonService.loggedIn">
-          <a mat-list-item (click)="commonService.login()" *ngIf="!commonService.loggedIn">{{ "PleaseLogin" | translate }}</a>
+        <span *ngIf="!commonService.name">
+          <a mat-list-item (click)="commonService.login()">{{ "PleaseLogin" | translate }}</a>
         </span>
-        <div class="logout" *ngIf="commonService.loggedIn">
+        <div class="logout" *ngIf="commonService.name">
           <span>
             {{ "Welcome" | translate }}
             {{ userName }}
