--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -42,6 +42,7 @@
       flex-direction: row;
       align-items: center;
       width: 100%;
+      margin-left: 6px;
 
       .mark {
         flex-basis: 41px;
@@ -54,7 +55,7 @@
       }
 
       .title {
-        font-size: 13px;
+        font-size: 16px;
         color: #000;
         font-weight: bolder;
       }
@@ -139,7 +140,7 @@
           display: flex !important;
           align-items: center;
 
-          &.disabled{
+          &.disabled {
             opacity: 0;
           }
         }
@@ -532,6 +533,14 @@
           font-size: 12px;
           line-height: 2;
 
+          &.summery{
+            ::ng-deep{
+              .mat-list-item-content{
+                justify-content: space-between;
+              }
+            }
+          }
+
           &.psname {
             font-size: 11px;
             line-height: 1.6;
@@ -540,21 +549,41 @@
             margin: 6px 12px;
             width: auto;
 
-            span {
-              //display: inline-flex;
+            .wrap {
               display: inline-block;
-              padding: 0 4px;
-              // background-color: #949494;
-              border: 1px solid #bdbdbd;
-              border-radius: 4px;
-              // color: #fff;
-              margin-right: 2px;
-              margin-bottom: -2px;
-              white-space: nowrap;
-              max-width: 46%;
-              overflow: hidden;
-              text-overflow: ellipsis;
+              margin-bottom: 2px;
+
+              span {
+                padding: 2px 4px;
+                // background-color: #BFA060;
+                // color: #fff;
+                border: 1px solid #bdbdbd;
+                border-radius: 4px;
+                margin-right: 2px;
+                margin-bottom: -2px;
+                white-space: nowrap;
+                max-width: 46%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-weight: 600;
+                color: #00000087;
+
+              }
+              &::after {
+                content: url("../../../../../assets/img/arrow-left-bold.svg");
+                width: 16px;
+                height: 16px;
+                vertical-align: middle;
+              }
+
+              &:last-child{
+                &::after{
+                  content: '';
+                }
+              }
+
             }
+
           }
 
           p {
@@ -680,7 +709,8 @@
 
             &::before {
               display: inline-block;
-              content: url("../../../../../assets/img/business-hour.svg");
+              //content: url("../../../../../assets/img/business-hour.svg");
+              content: url("../../../../../assets/img/av-timer.svg");
               width: 16px;
               height: 16px;
               padding-right: 3px;
@@ -694,11 +724,24 @@
 
             &::before {
               display: inline-block;
-              content: url("../../../../../assets/img/icon_spot.svg");
+              content: url("../../../../../assets/img/location_on.svg");
               width: 16px;
               height: 16px;
               padding-right: 3px;
-              vertical-align: sub;
+              vertical-align: -5px;
+            }
+            .maru{
+              display: inline-flex;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+              background-color: gray;
+              justify-content: center;
+              align-items: center;
+            }
+            span{
+              font-weight: bold;
+              color: #fff;
             }
           }
 
