--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -437,8 +437,9 @@
       .bottom-view {
         // display: flex;
         // flex-direction: row;
-        font-size: 11px;
+        font-size: 12px;
         color: #4E4E4E;
+        font-weight: 500;
         // height: 26px;
         align-items: center;
         position: relative;
@@ -735,7 +736,7 @@
               width: 16px;
               height: 16px;
               border-radius: 50%;
-              background-color: gray;
+              background-color:#00000087;
               justify-content: center;
               align-items: center;
             }
