--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -819,8 +819,10 @@ div.plandtl {
         .endtime {
           display: flex;
           justify-content: center;
-          background-color: #f7f6f6;
-
+          //background-color: #f7f6f6;
+          
+          border: 1px solid #ccc;
+          border-radius: 10px;
           .sufix {
             font-size: 14px;
             margin-right: 0.5em;
