--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -574,7 +574,7 @@
                 content: url("../../../../../assets/img/arrow-left-bold.svg");
                 width: 16px;
                 height: 16px;
-                vertical-align: middle;
+                vertical-align: -4px;
               }
 
               &:last-child{
